# multizip

./: .editorconfig  pyproject.toml  readme.rst
.github/workflows/: run-tests.yml
multizip/: mzip.py
tests/: test_mzip.py
tests/sample/: sample2.md
